Revert "Fix alignment in Arc"
This reverts commit 692e9d895ee463111dca6a118496e1fbc1350fc3.

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,11 @@ body {
   margin: 0;
   padding: 0;
   animation: fadeIn 2s ease;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  min-height: 100vh;
 }
 
 a {
@@ -126,14 +130,6 @@ a img:hover {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  min-height: 100vh;
 }
 
 .width-100 {
